all of them not working eheehe

--- a/rating-challenge/submittedpage.html
+++ b/rating-challenge/submittedpage.html
@@ -11,7 +11,7 @@
     
     <div class="container">
         <div class="selected-value">
-            <h3> You selected <span>4</span> out of 5</h3>
+            <h3> You selected <span id="rating-value">4</span> out of 5</h3>
         </div>
 
         <div class="thanks">
@@ -20,6 +20,6 @@
         </div>
 
     </div>
-    <script src="another.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
