--- a/interactive-pricing/index.html
+++ b/interactive-pricing/index.html
@@ -25,7 +25,7 @@
               min="0"
               max="200"
               value="0"
-              step="30"
+              step="20"
             />
           </div>
         </div>
@@ -37,7 +37,11 @@
           <h2>Monthly Billing</h2>
           <input id="year-input" type="checkbox" />
           <h2>Yearly Billing</h2>
+          <div id="discount">
+            <h2>-25%</h2>
+          </div>
         </div>
+        <br />
       </div>
     </main>
   </body>
