--- a/interactive-pricing/index.html
+++ b/interactive-pricing/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="pricing-card">
         <div class="inside-card">
-          <div class="view-value"><span>100</span>K PAGEVİEWS</div>
+          <div class="view-value"><span id="view">100</span>K PAGEVİEWS</div>
           <div class="range">
             <input
               id="range-input"
@@ -25,13 +25,13 @@
               min="0"
               max="200"
               value="0"
-              step="20"
+              step="5"
             />
           </div>
         </div>
         <div class="price-section">
-          <h1 class="price">$<span>123</span></h1>
-          <h2 class="price year"><span>/month</span></h2>
+          <h1 class="price">$<span id="current-price">123</span></h1>
+          <h2 class="price year"><span id="current-year">/month</span></h2>
         </div>
         <div class="year-select">
           <h2>Monthly Billing</h2>
